# aop_leptos

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  MACOS_APP.md  README.md  build-app.sh  oxyde-cloud.toml
.cargo/: config.toml
public/: data.db
src/: app.rs  lib.rs  main.rs  state.rs
src/components/: auth_guard.rs  mod.rs  nav.rs
src/db/: mod.rs
src/models/: mod.rs  paint.rs
src/pages/: forgot_password.rs  home.rs  login.rs  mod.rs  register.rs  reset_password.rs  settings.rs  target_mix.rs  test_mix.rs  verify_email.rs
src/server_fns/: auth.rs  mod.rs  paint.rs
src/services/: auth.rs  email.rs  lhtss.rs  mod.rs  optimization.rs  paint_mixing.rs
style/: input.css  main.scss  output.css
