[package]
name = "aop"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }

# Axum (SSR only)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
tower-sessions = { version = "0.13", optional = true }

# Database - SQLx
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }

# Auth
argon2 = { version = "0.5", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
hex = { version = "0.4", optional = true }

# Email
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Paint mixing / computation (SSR only)
ndarray = { version = "0.16", optional = true }
nalgebra = { version = "0.33", optional = true }
rayon = { version = "1.10", optional = true }
bincode = { version = "1.3", optional = true }

# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
dotenvy = { version = "0.15", optional = true }

# WASM
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "HtmlInputElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "FileReader",
    "FileList",
    "File",
    "Blob",
    "ImageData",
    "DomRect",
    "Element",
    "WheelEvent",
    "MouseEvent",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
hydrate = ["leptos/hydrate", "wasm-bindgen", "console_error_panic_hook", "web-sys"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos_axum",
    "axum",
    "tokio",
    "tower",
    "tower-http",
    "tower-sessions",
    "sqlx",
    "argon2",
    "sha2",
    "rand",
    "hex",
    "reqwest",
    "dotenvy",
    "ndarray",
    "nalgebra",
    "rayon",
    "bincode",
]

[package.metadata.leptos]
output-name = "aop"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/output.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[profile.release]
lto = true
opt-level = 3
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
